[gd_scene load_steps=22 format=3 uid="uid://p2k51ed4yu8"]

[ext_resource type="Script" uid="uid://b0v0l5pylnlqt" path="res://Game/Shape-Builder-Puzzle/script/Shape-Builder-puzzle.gd" id="1_ts37j"]
[ext_resource type="Texture2D" uid="uid://c83wao0ajlo6q" path="res://GameUI/Game_Backgrounds/Puzzle_Builder_BG6.PNG" id="2_mfkhi"]
[ext_resource type="PackedScene" uid="uid://hy61ksv3ufvn" path="res://Game/Shape-Builder-Puzzle/scene/Piece.tscn" id="3_5p71i"]
[ext_resource type="Texture2D" uid="uid://dxiwx5f7h3ota" path="res://Game/Shape-Builder-Puzzle/ui/house.PNG" id="3_8himh"]
[ext_resource type="PackedScene" uid="uid://dwuvub3x1tg64" path="res://Game/Shape-Builder-Puzzle/scene/Target.tscn" id="4_5p71i"]
[ext_resource type="Texture2D" uid="uid://bi6pjrl471d5h" path="res://Game/Shape-Builder-Puzzle/ui/new ui/IMG_6647.PNG" id="4_mfkhi"]
[ext_resource type="Theme" uid="uid://br70tphagchtl" path="res://GameUI/themes/GAME TIME.tres" id="5_drqlj"]
[ext_resource type="PackedScene" uid="uid://clsw7nspkg4y7" path="res://GameUI/scenes/Component/timer.tscn" id="6_f1e12"]
[ext_resource type="Texture2D" uid="uid://dginrqicd2u0r" path="res://Game/Shape-Builder-Puzzle/ui/Circle1.PNG" id="6_mfkhi"]
[ext_resource type="PackedScene" uid="uid://dufcdmyolk8xj" path="res://Game/LetterTracing/scenes/components/gameOverComponent.tscn" id="10_xmcih"]
[ext_resource type="PackedScene" uid="uid://cu6qlm20xe5km" path="res://components/menu_component.tscn" id="11_0p6h8"]
[ext_resource type="AudioStream" uid="uid://2j6lh0njanrm" path="res://Game/Shape-Safari/sound/BackgroundMusic.wav" id="11_uwtu8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m8prb"]
texture = ExtResource("2_mfkhi")

[sub_resource type="AtlasTexture" id="AtlasTexture_mfkhi"]
atlas = ExtResource("3_8himh")
region = Rect2(64, 84, 901, 849)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmcih"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uwtu8"]
bg_color = Color(0.784314, 0.482353, 0.243137, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0p6h8"]
bg_color = Color(0.784314, 0.482353, 0.243137, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j8r6r"]
bg_color = Color(1, 0.909804, 0.713726, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="AtlasTexture" id="AtlasTexture_8himh"]
atlas = ExtResource("4_mfkhi")
region = Rect2(88, 139, 850, 741)

[sub_resource type="AtlasTexture" id="AtlasTexture_aphbt"]
atlas = ExtResource("6_mfkhi")
region = Rect2(137, 139, 739, 739)

[sub_resource type="CircleShape2D" id="CircleShape2D_mfkhi"]
radius = 203.249

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ts37j")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_m8prb")

[node name="Targets" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.356771
anchor_top = 0.17963
anchor_right = 0.643229
anchor_bottom = 0.688889
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_mfkhi")
expand_mode = 1

[node name="Target" parent="Targets" instance=ExtResource("4_5p71i")]
position = Vector2(270, 148)
scale = Vector2(0.62, 0.65)
required_id = "1"

[node name="Target2" parent="Targets" instance=ExtResource("4_5p71i")]
position = Vector2(272, 403)
scale = Vector2(0.62, 0.65)
required_id = "2"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 0.0859375
anchor_bottom = 0.152778
offset_right = -125.0
offset_bottom = -125.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
metadata/_edit_use_anchors_ = true

[node name="MenuButton" type="Button" parent="MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.784314, 0.482353, 0.243137, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxFlat_xmcih")
theme_override_styles/hover = SubResource("StyleBoxFlat_uwtu8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0p6h8")
theme_override_styles/normal = SubResource("StyleBoxFlat_j8r6r")
text = "â˜°
"

[node name="Targets1" type="Node2D" parent="."]
position = Vector2(953, 503)

[node name="Pieces" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.696
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1882.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Pieces"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="Piece" parent="Pieces/HBoxContainer" instance=ExtResource("3_5p71i")]
position = Vector2(1044, 925)
piece_id = "1"
points = 1000

[node name="Sprite2D" parent="Pieces/HBoxContainer/Piece" index="0"]
position = Vector2(0.499999, 0.99999)
scale = Vector2(0.321176, 0.340081)
texture = SubResource("AtlasTexture_8himh")

[node name="CollisionShape2D" parent="Pieces/HBoxContainer/Piece" index="1"]
position = Vector2(1, 0)

[node name="Piece2" parent="Pieces/HBoxContainer" instance=ExtResource("3_5p71i")]
position = Vector2(552, 928)
piece_id = "2"
points = 500

[node name="Sprite2D" parent="Pieces/HBoxContainer/Piece2" index="0"]
position = Vector2(0, -9.53674e-06)
scale = Vector2(0.894737, 1.02033)

[node name="CollisionShape2D" parent="Pieces/HBoxContainer/Piece2" index="1"]
position = Vector2(-0.5, 0)

[node name="Piece3" parent="Pieces/HBoxContainer" instance=ExtResource("3_5p71i")]
position = Vector2(1458, 925)
scale = Vector2(0.62, 0.65)
points = 500

[node name="Sprite2D" parent="Pieces/HBoxContainer/Piece3" index="0"]
position = Vector2(-0.000225067, 1.53851)
scale = Vector2(0.562601, 0.543445)
texture = SubResource("AtlasTexture_aphbt")

[node name="CollisionShape2D" parent="Pieces/HBoxContainer/Piece3" index="1"]
position = Vector2(-0.000164032, 1.52588e-05)
shape = SubResource("CircleShape2D_mfkhi")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CongratsLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.5
offset_top = -34.5
offset_right = 344.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Congratulations! You built it!"

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -340.0
offset_right = -78.0
offset_bottom = 140.0
grow_horizontal = 0
theme = ExtResource("5_drqlj")
theme_override_font_sizes/font_size = 87
text = "Score: "

[node name="GameOverPopup" type="Popup" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-54, 99)
stream = ExtResource("11_uwtu8")
autoplay = true
bus = &"music"

[node name="menu" type="CanvasLayer" parent="."]

[node name="Timer" parent="menu" instance=ExtResource("6_f1e12")]
offset_left = -19.0
offset_top = 14.0
offset_right = -19.0
offset_bottom = 14.0
waitTime = 60.0
currentGameID = 5

[node name="Menu" parent="menu" instance=ExtResource("11_0p6h8")]
visible = false
z_index = 1

[node name="GameOverComponent" parent="menu" instance=ExtResource("10_xmcih")]
visible = false
z_index = 2
offset_left = -234.5
offset_top = -286.0
offset_right = 234.5
offset_bottom = 286.0

[connection signal="pressed" from="MarginContainer/MenuButton" to="." method="_on_menu_button_pressed"]

[editable path="Pieces/HBoxContainer/Piece"]
[editable path="Pieces/HBoxContainer/Piece2"]
[editable path="Pieces/HBoxContainer/Piece3"]
[editable path="menu/Menu"]
